[fix] Reduced function of QuizOwner.
Reduced function of QuizOwner because it was assigned too much role.

--- a/docs/style.css
+++ b/docs/style.css
@@ -13,22 +13,19 @@
         line-height: 2rem;
         overflow: hidden;
     }
-    .commonBtn {
+    .commonButton {
         text-align: center;
         font-size: 6vw;
         background: transparent;
         color: #323232;
         border: solid 3px #323232;
         box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
-    }/*
-    .commonButton:active {
-        box-shadow: inset 0 0 2px rgba(128, 128, 128, 0.1);
-        transform: translateY(2px);
-    }*/
-    #nextButton {
-        width: 80vw;
+    }
+    .nextButton {
+        display: inline-block;
+        width: 40vw;
         height: 12vh;
-        margin: 1vh 7.5vw 2vh;
+        margin: 1vh 3.5vw 2vh;
     }
     #kogo {
         padding-top: 10vh;
